--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,31 +1,54 @@
-<resources>
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Dark Theme -->
+    <style name="Theme.YourAppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color -->
-        <item name="colorPrimary">@color/primary_dark_mode</item>
-        <item name="colorPrimaryVariant">@color/primary_variant_dark_mode</item>
-        <item name="colorOnPrimary">@color/on_primary_dark</item>
+        <item name="colorPrimary">@color/modern_primary</item>
+        <item name="colorPrimaryVariant">@color/modern_primary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+
+        <item name="colorBackground">@color/white</item>
 
         <!-- Secondary brand color -->
-        <item name="colorSecondary">@color/secondary_dark_mode</item>
-        <item name="colorSecondaryVariant">@color/secondary_dark_mode</item>
-        <item name="colorOnSecondary">@color/on_primary_dark</item>
+        <item name="colorSecondary">@color/modern_secondary</item>
+        <item name="colorSecondaryVariant">@color/modern_secondary</item>
+        <item name="colorOnSecondary">@color/white</item>
 
         <!-- Status bar color -->
-        <item name="colorPrimaryDark">@color/primary_dark_dark_mode</item>
-        <item name="colorAccent">@color/accent_dark_mode</item>
+        <item name="android:statusBarColor">@color/black</item>
 
         <!-- Background colors -->
         <item name="android:colorBackground">@color/background_dark</item>
-        <item name="colorBackground">@color/background_dark</item>
-        <item name="colorOnBackground">@color/on_background_dark</item>
+        <item name="colorOnBackground">@color/text_primary_dark</item>
         <item name="android:windowBackground">@color/background_dark</item>
 
         <!-- Surface colors -->
         <item name="colorSurface">@color/surface_dark</item>
-        <item name="colorOnSurface">@color/on_surface_dark</item>
+        <item name="colorOnSurface">@color/text_primary_dark</item>
 
         <!-- Text colors -->
         <item name="android:textColorPrimary">@color/text_primary_dark</item>
         <item name="android:textColorSecondary">@color/text_secondary_dark</item>
+
+        <!-- Custom attributes -->
+        <item name="cardStrokeColor">@color/card_background_dark</item>
+        <item name="dividerColor">@color/modern_divider</item>
+        <item name="headerBackground">@color/header_background_dark</item>
+
+        <!-- 🔥 FIX: Remove default Splash for Android 12+ -->
+        <item name="android:windowSplashScreenBackground" tools:targetApi="31">@color/background_dark</item>
+        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="31">@null</item>
+        <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="31">@android:color/transparent</item>
+
+        <item name="android:navigationBarColor">@color/background_dark</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
+
+        <!-- Navigation bar styling for dark mode -->
+        <item name="android:navigationBarColor">@color/background_dark</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
+        <!-- Make nav bar flush with content -->
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="28">shortEdges</item>
+        <item name="android:enforceNavigationBarContrast" tools:targetApi="29">false</item>
     </style>
 </resources>
