--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,3 +1,8 @@
+<!-- res/values/attrs.xml -->
 <resources>
-    <attr name="colorBackground" format="color"/>
+    <attr name="cardStrokeColor" format="color" />
+    <attr name="dividerColor" format="color" />
+    <attr name="headerBackground" format="color" />
+    <attr name="colorBackground" format="color" />
+
 </resources>
