--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- App Theme -->
     <style name="Theme.YourAppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color -->
@@ -11,6 +11,9 @@
         <item name="colorSecondary">@color/modern_secondary</item>
         <item name="colorSecondaryVariant">@color/modern_secondary</item>
         <item name="colorOnSecondary">@color/white</item>
+
+
+        <item name="colorBackground">@color/white</item>
 
         <!-- Status bar color -->
         <item name="android:statusBarColor">@color/modern_primary_dark</item>
@@ -30,10 +33,20 @@
 
         <!-- Elevation for components -->
         <item name="cardElevation">4dp</item>
+        <item name="cardStrokeColor">@color/card_stroke</item>
+        <item name="dividerColor">@color/divider</item>
+        <item name="headerBackground">@color/header_background</item>
 
         <!-- 🔥 FIX: Loại bỏ Splash mặc định của Android 12+ -->
-        <item name="android:windowSplashScreenBackground">@android:color/white</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@null</item>
-        <item name="android:windowSplashScreenIconBackgroundColor">@android:color/transparent</item>
+        <item name="android:windowSplashScreenBackground" tools:targetApi="31">@android:color/white</item>
+        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="31">@null</item>
+        <item name="android:windowSplashScreenIconBackgroundColor" tools:targetApi="31">@android:color/transparent</item>
+
+        <!-- Navigation bar styling for light mode -->
+        <item name="android:navigationBarColor">@color/white</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
+        <!-- Make nav bar flush with content -->
+        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="28">shortEdges</item>
+        <item name="android:enforceNavigationBarContrast" tools:targetApi="29">false</item>
     </style>
 </resources>
