--- a/app/src/main/res/drawable/splash_gradient_background.xml
+++ b/app/src/main/res/drawable/splash_gradient_background.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="135"
-        android:endColor="#1E3C72"
-        android:startColor="#2A5298" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <gradient
+                android:angle="135"
+                android:startColor="@color/primary_dark"
+                android:centerColor="@color/primary"
+                android:endColor="@color/primary_light"
+                android:type="linear" />
+        </shape>
+    </item>
+</layer-list>
