--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/bottom_nav_background"
         android:elevation="8dp"
-        app:itemIconTint="@drawable/bottom_nav_item_color"
-        app:itemTextColor="@drawable/bottom_nav_item_color"
+        app:itemIconTint="@color/modern_primary"
+        app:itemTextColor="@color/modern_text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
