--- a/app/src/main/res/layout/activity_match_details.xml
+++ b/app/src/main/res/layout/activity_match_details.xml
@@ -22,14 +22,14 @@
             android:layout_marginStart="8dp"
             android:padding="12dp"
             android:src="@drawable/ic_back"
-            app:tint="?android:attr/textColorPrimary" />
+            app:tint="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Chi tiết trận đấu"
-            android:textColor="?android:attr/textColorPrimary"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
