--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,14 +9,15 @@
         android:icon="@drawable/ic_trophy"
         android:title="Standing" />
     <item
+        android:id="@+id/navigation_news"
+        android:icon="@drawable/ic_news"
+        android:title="News" />
+    <item
         android:id="@+id/navigation_favorite"
         android:icon="@drawable/ic_favorite"
         android:title="Favorite" />
-
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_settings"
         android:title="Settings" />
-
-
 </menu>
